fix-text-overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -121,7 +121,7 @@ html {
   border-radius: 0.8rem;
 }
 .card-body {
-  min-height: 150px;
+  min-height: 145px;
 }
 .text-center {
   display: flex;
